# fps

./: .gitignore  README.md  makefile  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
src/fun/: __init__.py  config.py  editor.py  insert.py  minivi.py  moving.py  private.py  tput.py
src/pyvilib/: insert.py  minivi.py
src/tipplib/: __init__.py  text.py  util.py  worditor.py
src/vilib/: __init__.py
tests/: conftest.py  test_another.py  test_editor_registry.py  test_have_fun.py  test_pytest.py  test_tipplib.py
