
[project]
name = "fps"
version = "0.0.1"  # zerover
description = "ein Versuch zur Framerate im Terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anita",
    "blessed",
]

[dependency-groups]
dev = [
    # "debugpy",
    "pytest",
    "ruff",
]

[tool.uv.sources]
anita = { path = "../anita", editable = true }
# netscape-bookmarks-file-parser = { git = "https://github.com/FlyingWolFox/Netscape-Bookmarks-File-Parser.git" }
# ttkbootstrap = { git = "https://github.com/israel-dryer/ttkbootstrap.git" }

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# hier die Pakete angeben, die in das Wheel aufgenommen werden sollen
packages = ["src/fun", "src/pyvilib", "src/tipplib", "src/bin"]

[project.scripts]
# vi sollte man hier besser (noch) nicht eintragen :)
tippse = "bin.maschinenschreiben:main"
pyvian = "bin.like_vi_but:main"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

